mdapipkg/objects/Migrated_Lifetime_Header__c.object
<CustomObject>
    <fields>
        <fullName>Account_Member_Text__c</fullName>
        <label>Account Member Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipName>Open_Rev_Rec_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Date__c</fullName>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Migrated_Remaining_Opening_Balance__c</fullName>
        <label>Migrated Remaining Opening Balance</label>
        <summarizedField>Migrated_Lifetime_Lines__c.Migrated_Remaining_Opening_Balance__c</summarizedField>
        <summaryForeignKey>Migrated_Lifetime_Lines__c.Open_Rev_Rec_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Migrated_Rev_Rec_Remaining__c</fullName>
        <label>Migrated Rev Rec Remaining</label>
        <summarizedField>Migrated_Lifetime_Lines__c.Migrated_Rev_Rec_Remaining__c</summarizedField>
        <summaryForeignKey>Migrated_Lifetime_Lines__c.Open_Rev_Rec_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Original_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Invoice #</label>
        <referenceTo>KGRenewal__Invoice__c</referenceTo>
        <relationshipName>Open_Rev_Rec_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Status__c</fullName>
        <label>Post Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffrrtemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>ffrr__Template__c</referenceTo>
        <relationshipName>Open_Rev_Rec_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Migrated Lifetime Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Accounting_Currency__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Document_Date__c</columns>
        <columns>Original_Invoice__c</columns>
        <columns>Post_Status__c</columns>
        <columns>Account_Member_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RR-{00000000}</displayFormat>
        <label>Open Rev Rec Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migrated Lifetime Header</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>